argocd/microservices/dex/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: argocd-dex
  name: argocd-dex
