argocd/microservices/dex/kustomize/base/dex-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: argocd-dex-server
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: dex-server
  name: argocd-dex-server
spec:
  ports:
  - name: http
    appProtocol: TCP
    protocol: TCP
    port: 5556
    targetPort: 5556
  - name: grpc
    protocol: TCP
    port: 5557
    targetPort: 5557
  - name: metrics
    port: 5558
    protocol: TCP
    targetPort: 5558
  selector:
    app.kubernetes.io/name: argocd-dex-server
